--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.content {
+  max-width: calc(100vw - 15.625rem) !important;
+  min-width: calc(100vw - 15.625rem) !important;
+  height: 100vh;
+}
+
 a {
   color: inherit;
   text-decoration: none;
