(feat): Implemented grouping the fields and added uploading part while uploading the file

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@ body {
 }
 
 body {
+  font-family: "Nunito Sans", sans-serif;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
